--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ảnh Dìm Của Tôi</title>
+  <title>🐒Ảnh Dìm Của Long🐕‍🦺</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>Ảnh Dìm Của Tôi</h1>
+    <h1>🐒Ảnh Dìm Của Long🐕‍🦺</h1>
     <div class="gallery">
       <div class="gallery-item" id="image1">
         <img src="images/anh1.jpg" alt="Ảnh 1">
